test/mutation_analysis/s0941_valid_mountain_array/hafis/starchat/mutants/41/result.txt
./test/mutation_analysis/s0941_valid_mountain_array/hafis/starchat/mutants/41/Solution.java:23: error: unreachable statement
        for (; false; i++) {
                           ^
1 error
